<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingTop="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/password_reset_header" />
        <FrameLayout android:id="@id/fragment_user_password_recovery_button_email_reset_container" android:background="@drawable/bg_simple_row" android:visibility="gone" style="@style/PaddedRow">
            <TextView android:textStyle="bold" android:id="@id/fragment_user_password_recovery_button_email_reset" android:text="@string/reset_with_email" android:drawableLeft="@drawable/profile_glyph_email" style="@style/FieldWithGlyph" />
            <com.instagram.ui.widget.spinner.RefreshSpinner android:layout_gravity="center|right" android:id="@id/email_spinner" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/row_text_padding" app:dark="true" />
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <FrameLayout android:id="@id/fragment_user_password_recovery_button_sms_reset_container" android:background="@drawable/bg_simple_row" android:visibility="gone" style="@style/PaddedRow">
            <TextView android:textStyle="bold" android:id="@id/fragment_user_password_recovery_button_sms_reset" android:text="@string/sms_reset_link" android:drawableLeft="@drawable/profile_glyph_phone" style="@style/FieldWithGlyph" />
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <FrameLayout android:id="@id/fragment_user_password_recovery_button_connect_with_facebook" android:background="@drawable/bg_simple_row" style="@style/PaddedRow">
            <TextView android:textStyle="bold" android:id="@id/connect_with_facebook_textview" android:text="@string/reset_with_facebook" android:drawableLeft="@drawable/share_facebook" style="@style/FieldWithGlyph" />
            <include layout="@layout/row_divider" />
        </FrameLayout>
        <TextView android:textColor="@color/grey_light" android:id="@id/fragment_user_password_recovery_textview_email_alt" android:padding="@dimen/row_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/row_padding" android:layout_marginRight="@dimen/row_padding" android:text="@string/choose_how_you_would_like_to_reset_your_password" />
        <TextView android:id="@id/fragment_user_password_recovery_textview_request_sent" android:paddingLeft="28.0dip" android:paddingRight="28.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/row_text_padding" android:text="@string/email_sent" android:lineSpacingExtra="4.0dip" />
    </LinearLayout>
</ScrollView>