<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/layout_button_group_view_switcher_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="48.0dip">
        <com.instagram.android.fragment.ViewSwitcherButton android:id="@id/layout_button_group_view_switcher_button_grid" android:layout_width="0.0px" android:layout_height="fill_parent" android:src="@drawable/profile_grid" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/profile_grid_description" />
        <View android:layout_gravity="center_vertical" android:id="@id/vertical_divider_1" android:background="@color/grey_2" android:visibility="gone" android:layout_width="1.0px" android:layout_height="24.0dip" />
        <com.instagram.android.fragment.ViewSwitcherButton android:id="@id/layout_button_group_view_switcher_button_list" android:layout_width="0.0px" android:layout_height="fill_parent" android:src="@drawable/profile_list" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/profile_list_description" />
        <View android:layout_gravity="center_vertical" android:id="@id/vertical_divider_2" android:background="@color/grey_2" android:visibility="gone" android:layout_width="1.0px" android:layout_height="24.0dip" />
        <com.instagram.android.widget.ProfileMapButton android:id="@id/layout_button_group_view_switcher_button_map" android:visibility="gone" android:layout_width="0.0px" android:layout_height="fill_parent" android:src="@drawable/profile_map" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/profile_map_description" />
        <com.instagram.android.people.widget.ProfileTagsButton android:id="@id/layout_button_group_view_switcher_button_tagged" android:visibility="gone" android:clickable="true" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="1.0" android:contentDescription="@string/profile_tagged_description" />
        <TextView android:textColor="@color/grey_light" android:gravity="center" android:id="@id/layout_button_group_view_switcher_text" android:visibility="gone" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="2.0" />
    </LinearLayout>
    <include layout="@layout/row_divider" />
</FrameLayout>