<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="@dimen/row_text_padding" android:layout_marginTop="@dimen/row_height_small" style="@style/PaddedRow"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/phone_number_container" android:layout_width="fill_parent" android:layout_height="@dimen/row_height_small" android:layout_marginTop="16.0dip">
        <EditText android:id="@id/phone_number" android:paddingLeft="40.0dip" android:paddingRight="44.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/phone" android:singleLine="true" android:digits="0123456789 -()" android:inputType="number" android:imeOptions="actionGo" />
        <TextView android:textStyle="bold" android:textColor="@color/accent_blue_medium" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/country_code_picker" android:layout_width="40.0dip" android:layout_height="fill_parent" android:text="+1" android:singleLine="true" android:freezesText="true" />
        <TextView android:textColor="@color/accent_blue_medium" android:gravity="center_vertical" android:layout_gravity="right" android:id="@id/clear_phone_text" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="fill_parent" android:text="@string/clear_phone_number" android:singleLine="true" />
    </FrameLayout>
    <FrameLayout android:id="@id/instructions_container" style="@style/PaddedRow">
        <TextView android:textColor="@color/grey_light" android:paddingTop="@dimen/row_text_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_number_associated_with_account" android:lineSpacingExtra="4.0dip" />
    </FrameLayout>
</LinearLayout>