<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/tabbed_landing_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.instagram.android.nux.landing.LandingRotatingBackgroundView android:id="@id/tabbed_landing_rotating_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/confirmation_code_text_margin_between" android:src="@drawable/reg_email" />
            <com.instagram.ui.text.FreightSansTextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/fragment_registration_confirmation_code_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/confirmation_code_fragment_title" />
            <TextView android:textSize="@dimen/font_medium" android:textColor="@android:color/white" android:gravity="center" android:id="@id/fragment_registration_confirmation_code_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/confirmation_code_text_margin_sides" android:layout_marginTop="@dimen/confirmation_code_text_margin_between" android:layout_marginRight="@dimen/confirmation_code_text_margin_sides" android:layout_marginBottom="@dimen/confirmation_code_text_margin_between" />
            <EditText android:ellipsize="start" android:gravity="center" android:layout_gravity="center" android:id="@id/fragment_registration_confirmation_code_input" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/row_height_small" android:layout_marginLeft="@dimen/confirmation_code_text_margin_sides" android:layout_marginRight="@dimen/confirmation_code_text_margin_sides" android:hint="@string/confirmation_code" android:singleLine="true" android:inputType="number" android:privateImeOptions="nm" android:imeOptions="actionNext" />
            <com.instagram.ui.text.FreightSansTextView android:textSize="@dimen/font_large" android:textStyle="bold" android:textColor="@color/nux_dayone_email_pressed" android:gravity="center" android:layout_gravity="center" android:id="@id/fragment_registration_confirmation_code_next" android:layout_width="wrap_content" android:layout_height="@dimen/row_height_small" android:text="@string/next_caps" />
            <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <LinearLayout android:orientation="horizontal" android:id="@id/fragment_registration_confirmation_code_alt_options" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/confirmation_code_text_margin_sides" android:layout_marginRight="@dimen/confirmation_code_text_margin_sides" android:layout_marginBottom="@dimen/confirmation_code_text_margin_bottom">
                <TextView android:textSize="@dimen/font_medium" android:textColor="@android:color/white" android:gravity="center" android:id="@id/fragment_registration_confirmation_code_resend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/confirmation_code_fragment_resend" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/font_medium" android:textColor="@android:color/white" android:gravity="center" android:id="@id/fragment_registration_confirmation_code_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/confirmation_code_fragment_login_instead" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>